reworked to meet specifications for assignment, also fixed so the event listener would be on keyup so it would get every letter instead of being a letter behind, added some more cars to the car list

--- a/quiz.css
+++ b/quiz.css
@@ -5,7 +5,7 @@
   height: 300px;
 }
 
-.onClickEvent {
+.green {
   background-color: green;
   border: 1em solid black;
   color: white;
